<resources>
    <string name="app_name">TestPrep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test Prep</string>
    <string name="nav_header_subtitle">Equality Empowerment</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="question_header">Question:\n\n</string>
    <string name="practice">Practice</string>
    <string name="quiz">Quiz</string>
    <string name="model_tests">Model Tests</string>
    <string name="question_header">Question:</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>@string/practice</item>
        <item>@string/quiz</item>
        <item>@string/model_tests</item>
        <item>Stats</item>
        <item>Settings</item>
        <item>Feedback</item>
        <item>Rate Us</item>
        <item>Donate</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="optionA">A</string>
    <string name="optionB">B</string>
    <string name="optionC">C</string>
    <string name="optionD">D</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="question_image">QuestionImage</string>
    <string name="remaining_time">Time Remaining:</string>

    <string name="sample_quote">Sample Quote</string>
    <string name="sample_author">Unknown</string>
    <string name="sample_wish">Good Morning!</string>

    <string name="nothing_to_show">Nothing to show in this section yet!\n Come back later</string>

    <string name="quick_quiz">Take a Quiz</string>
</resources>
