<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingTop="@dimen/activity_horizontal_margin"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_home_wish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_16sp"
        android:layout_marginStart="@dimen/padding_8sp"
        android:layout_marginEnd="@dimen/padding_8sp"
        android:paddingBottom="@dimen/padding_8sp"
        android:text="@string/sample_wish"
        android:textStyle="bold"
        android:textSize="@dimen/big_font"
        android:gravity="center" />

    <View style="@style/HomeDivider"/>

    <TextView
        android:id="@+id/tv_home_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16sp"
        android:layout_marginStart="@dimen/padding_8sp"
        android:layout_marginEnd="@dimen/padding_8sp"
        android:textAlignment="center"
        android:text="@string/sample_quote"
        android:textStyle="italic"
        android:textSize="@dimen/medium2_font"/>

    <TextView
        android:id="@+id/tv_home_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_8sp"
        android:layout_marginStart="@dimen/padding_8sp"
        android:layout_marginEnd="@dimen/padding_8sp"
        android:text="@string/sample_author"
        android:textSize="@dimen/medium_font"
        android:textStyle="bold"
        android:gravity="end"/>

</LinearLayout>